# generic-forecast

./: .gitignore  Dockerfile  main.py  pyproject.toml
src/domain/: models.py
src/infrastructure/api/: routes.py
src/infrastructure/forecasting_models/: anomaly_detection_model.py  prophet_model.py
src/infrastructure/persistence/: data_persistance.py  model_repository.py
src/use_cases/: detect_anomalies_use_case.py  predict_forecast_use_case.py  train_anomaly_model_use_case.py  train_model_use_case.py
