[project]
name = "generic-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.2",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.9",
    "holidays>=0.47",
    "numpy<2.0",
    "lightgbm",
]
